weekend: fix orange cell spacing

--- a/components/widgets-where-to/index.css
+++ b/components/widgets-where-to/index.css
@@ -8,16 +8,11 @@
 
 .widgetsWhereTo > * {
   flex: 0 1 33%;
-  border-bottom: var(--border-widgetSeperator);
 }
 
 @media (min-width: 32em) {
   .widgetsWhereTo {
     flex-direction: row;
-  }
-
-  .widgetsWhereTo > * {
-    border-right: var(--border-widgetSeperator);
   }
 
   .widgetsWhereTo > :last-child {
