--- a/static/entry.css
+++ b/static/entry.css
@@ -1297,7 +1297,7 @@ messages can be shown */
   -webkit-flex: 0 1 33%;
       -ms-flex: 0 1 33%;
           flex: 0 1 33%;
-  border-bottom: 0.9rem solid rgb(245,245,245);
+  /*border-bottom: var(--border-widgetSeperator);*/
 }
 
 @media (min-width: 32em) {
@@ -1310,7 +1310,7 @@ messages can be shown */
   }
 
   .widgetsWhereTo > * {
-    border-right: 0.9rem solid rgb(245,245,245);
+    /*border-right: var(--border-widgetSeperator);*/
   }
 
   .widgetsWhereTo > :last-child {
